# sensor-placement-223p

./: .gitmodules  ASM.py  DESAL.py  LICENSE  README.md  WWTP.py  count.ipynb  extract_topology.py  kv-system-1.py  kv-system-2.py  pyproject.toml  template_table.py  test-sys-img2.py  utils.py
models/: asm.ttl  desal.ttl  kv1.ttl  kv2.ttl  test.ttl  wwtp.ttl
water-templates/: connections.yml  stuff.yml  stuff2.yml  stuff3.yml  stuff4.yml
water-templates-2/: stuff2.yml
