[tool.poetry]
name = "sensor-placement"
version = "0.1.0"
description = ""
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.8.1, <3.12"
buildingmotif = {path = "BuildingMOTIF"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
