project = { dependencies = [
    "matplotlib>=3.9.0",
] }
[tool.poetry]
name = "sensor-placement"
version = "0.1.0"
description = ""
authors = ["Gabe Fierro <gtfierro@mines.edu>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.9, <3.12"
buildingmotif = {path = "BuildingMOTIF", extras = ["topquadrant"]}
pydot = "^2.0.0"
networkx = "2.8.8"
matplotlib = "^3.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
